--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -12,7 +12,7 @@
             <td>{{product.productName}}</td>
             <td>{{product.quantityOnHand}}</td>
             <td>{{product.price}}</td>
-            <td><button class="btn btn-danger" (click)="deleteProduct(product.productId)">Delete</button></td>
+            <td><button class="btn btn-danger" (click)="deleteProduct(product.productId)">Delete Item</button></td>
         </tr>
     </table>
 </div>
