--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<h2 style="color: seagreen;">{{deleteMessage}}</h2>
 <div>
     <table border="1" bgcolor="lightblue" cellspacing="10" cellpadding="10">
         <tr>
@@ -16,3 +17,8 @@
         </tr>
     </table>
 </div>
+
+<br>
+<br>
+<button class="btn btn-primary" (click)="navigateToProductAdd()">Add Product</button>
+<br><br>
