--- a/src/app/trying.html
+++ b/src/app/trying.html
@@ -1,3 +1,6 @@
+<button (click)="toggleOthers()">{{!showDown?'Show':'Hide'}} Down</button><br>
+
+<ng-container *ngIf="showDown"> 
 <br/>
 
 Number 1 : <input type="number" [(ngModel)]="num1">
@@ -17,3 +20,24 @@ Number 2 : <input type="number" name="secondNum" #secondNum value=0>
 
 Result :{{sum}}
 <br/><br/><hr>
+
+<div #div (mouseover)="overDiv()"></div><hr>
+<h1 (click)="this.changeName()">Click to change name</h1>
+<h3>{{ name }}</h3>
+<img [src]="imageUrl"><br><br>
+<button (click)="changeImage()" type="button" class="btn btn-primary">Click to change Image</button><br/>
+
+<br/><hr>
+
+<button *ngIf="userLogged">Login</button><br><br>
+<div [ngSwitch]="color">
+    <p *ngSwitchCase="'red'" style="color: red;">Red</p>
+    <p *ngSwitchCase="'yellow'" style="color: yellow;">Yellow</p>
+</div>
+<br>
+<h2>Departments</h2>
+<ul *ngIf="!ishidden">
+    <li *ngFor="let dept of depts">{{dept}}</li>
+</ul>
+<button (click)="hide()">{{ishidden?'Show':'Hide'}} Departments</button>
+</ng-container>
