--- a/src/app/trying.html
+++ b/src/app/trying.html
@@ -6,19 +6,19 @@
 Number 1 : <input type="number" [(ngModel)]="num1">
 
 Number 2 : <input type="number" [(ngModel)]="num2">
-
-<button (click)="add(num1,num2)">sum</button>
-
-Result :{{sum}}
+&nbsp;
+<button (click)="add(num1,num2)">sum</button>&nbsp;
+<!-- Sum of {{num1}} and {{num2}} -->
+Result : {{sum}}
 
 <br/>
-Number 1 : <input type="number" name="firstNum" #firstNum  value=0>
+<!-- Number 1 : <input type="number" name="firstNum" #firstNum  value=0>
 
 Number 2 : <input type="number" name="secondNum" #secondNum value=0>
 
 <button (click)="add(firstNum.value,secondNum.value)">sum</button>
 
-Result :{{sum}}
+Result :{{sum}} -->
 <br/><br/><hr>
 
 <div #div (mouseover)="overDiv()"></div><hr>
